2005-06-12  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: rewrie OraConf#check_lp64().

2005-06-08  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: test __64BIT__ to check whether lp64. (for AIX 64bit)

2005-05-31  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: fix for cygwin. fix for oracle instant client.
	* metaconfig: add distbin task.

2005-05-29  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: change the detection logic for Multiple
	  Oracle Homes on Windows.

2005-05-24  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: use "-L#{@oracle_home}/lib(32) -lclntsh" as
	   a last resort.

2005-04-14  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: fix for Cygwin with Oracle instant client.
	   add Oraconf#lp64, which is true when long and pointer are 64 bits.
	   improve error message.

2005-04-10  KUBO Takehiro  <kubo@jiubao.org>
	* README: change the document format for rdoc.
	* ext/oci8/bind.c, ext/oci8/descriptor.c, ext/oci8/env.c,
	   ext/oci8/error.c, ext/oci8/const.c, ext/oci8/handle.c
	   ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/stmt.c:
	   change bind_type_t structure. bind_* variables in binc.c
	   become OCI8::BindType::* which are subclasses of OCIBind.
	   add envh member to oci8_handle_t and oci8_bind_handle_t.
	   add OCIRowid#initialize.
	   delete macros to compile on ruby 1.6.
	* lib/oci8.rb.in: add comments for rdoc.
	   change OCI8::BindType::*.
	* lib/DBD/OCI8/OCI8.rb
	   change DBI::DBD::OCI8::BindType::*.

2005-04-06  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h, ext/oci8/handle.c: delete enum oci8_bind_type.
	  add oci8_bind_type_t.
	* ext/oci8/bind.c: add oci8_bind_type_t structures bind_string, bind_raw,
	   bind_fixnum, bind_float, bind_oradate, bind_integer, bind_oranumber,
	   bind_rowid, bind_clob, bind_blob, and bind_stmt.
	   add oci8_bind_type_set() and oci8_bind_type_get() to get/set 
	   an oci8_bind_type_t structure.